k8s/apps/git-migrator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git-migrator
  labels:
    istio-injection: enabled
    database-access: allowed
