k8s/apps/git-migrator/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-git-migrator
  namespace: git-migrator
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-ingress
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-internal-git-migrator
  namespace: git-migrator
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - git-migrator
