k8s/apps/git-migrator/istio-auth-ingress.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-reposhift-public
  namespace: istio-ingress
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - repomigrator.tesserix.app
